--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "firebase": "^6.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
+    "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-firestore": "^0.8.0",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.4.5"
   },
